# setup.cfg - Legacy configuration file for setuptools
# Modern configuration is in pyproject.toml
# This file exists for backward compatibility only
#
# Last updated: 2025-09-03

[metadata]
# See pyproject.toml for package metadata

[options]
# See pyproject.toml for package options

[options.packages.find]
# See pyproject.toml for package discovery

[aliases]
test = pytest

[tool:pytest]
# See pyproject.toml or pytest.ini files for test configuration

[bdist_wheel]
universal = 0  # This package is Python 3 only

[egg_info]
tag_build = 
tag_date = 0